--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ h1 {
   color: #FFFFFF;
   font-size: 32px;
   background-color: #00008B;
-  Border: 3px solid #c0c0c0;
+  border: 3px solid #C0C0C0;
   text-align: center;
 }
