--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 h1 {
-  font-family: Ariel, serif;
+  font-family: Garamond, serif;
   color: #FFFFFF;
-  font-size: 32px;
+  font-size: 48px;
   background-color: #00008B;
   padding: 10px 10px;
   border: 2px solid #C0C0C0
