--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 h1 {
-  font-family: Garamond, serif;
+  font-family: Ariel, serif;
   color: #FFFFFF;
   font-size: 48px;
   background-color: #00008B;
