--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body {
+  
+  
 h1 {
   font-family: Ariel, serif;
   color: #FFFFFF;
@@ -6,5 +8,5 @@ h1 {
   background-color: #00008B;
   padding: 10px 10px;
   border: 2px solid #C0C0C0
-  font: center;
+  
 }
