--- a/style.css
+++ b/style.css
@@ -2,11 +2,9 @@
   
 h1 {
   font-family: Ariel, serif;
-  color: #FFFFFF;
-  font-size: 32px;
-  background-color: #00008B;
-  padding: 10px 10px;
-  border: 3px solid #C0C0C0
+  color: #00008B;
+  font-size: 64px;
+  border: 32px solid #C0C0C0
   
   
 }
