--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body {
-  height: 100%
-  font: Ariel, serif;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 100%
+  height: 100%;
+  font-family: Ariel, serif;
+  width: 100%;
   
 }
   
