--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@ body {
 h1 {
   font-family: Ariel, serif;
   color: #00008B;
-  font-size: 64px;
+  font-size: 32px;
   border: 16px solid #C0C0C0
   
   
+}
+
+h2 {
+  font: caps bold 28px serif;
 }
