--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px 10px 10px 10px;
   font-family: Ariel, serif;
-  background: 
+  background-image: url("http://cdn.differencebetween.net/wp-content/uploads/2018/01/Difference-between-Coding-and-Programming.jpg") 
   
 }
   
