--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px 10px 10px 10px;
   font-family: Ariel, serif;
-  background-color: #FFFAFA 
+  background-color: #000000 
   
 }
   
