--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1 {
   font-family: Ariel, serif;
   color: #ffffff;
   font-size: 48px;
+  font-strectch: normal;
   border: 16px solid #00008B
   
   
