--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
   color: #ffffff;
   font-size: 48px;
   font-strectch: normal;
-  border: 16px solid #00008B
+  border: 10px solid #00008B;
   
   
 }
