--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
   font-family: Ariel, serif;
   color: #ffffff;
   font-size: 48px;
-  font-strectch: normal;
+  font-stretch: normal;
   border: 10px solid #00008B;
   
   
