--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px 10px 10px 10px;
   font-family: Ariel, serif;
-  background-image: #000000;
+  background-image: url("https://images.yourstory.com/cs/wordpress/2018/03/coding-job.png?fm=png&auto=format");
   
 }
   
