--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px 10px 10px 10px;
   font-family: Ariel, serif;
-  background-image: url("https://images.yourstory.com/cs/wordpress/2018/03/coding-job.png?fm=png&auto=format");
+  background-image: url("https://cdn.i-scmp.com/sites/default/files/styles/1200x800/public/d8/images/methode/2019/03/16/35e584f4-46f3-11e9-b5dc-9921d5eb8a6d_image_hires_194000.JPG?itok=RiqWzzUS&v=1552736407");
   
 }
   
