--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
   color: #ffffff;
   font-size: 48px;
   font-stretch: ultra-expanded;
-  border: 10px dotted #00008B;
+  border: 10px solid #ffffff;
   
   
 }
