--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ h2 {
   font: bold 28px serif;
 }
 
+#frame {
+  font-family: serif;
+  color: #ffffff;
+  margin: 10% auto 10%;
+
 .single {
   line-height: .75;
 }
