--- a/style.css
+++ b/style.css
@@ -30,8 +30,21 @@ h3 {
   font-family: serif;
   color: #ffffff;
   margin: 10% auto 10%;
+  
+}
+
+h4 {
+  font: 20px; 
+}
+h5 {
+  font: 20px;
+  font-weight: italic;
+}
 
 .single {
   line-height: .75;
 }
+  .date {
+    float: right;
+  }
 
