--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ h2 {
 }
 
 h3 {
-  font: 16px italic;
+  font-size: 16px;
+  font-weight: italic;
 }
 #frame {
   font-family: serif;
@@ -34,10 +35,10 @@ h3 {
 }
 
 h4 {
-  font: 20px; 
+  font-size: 22px; 
 }
 h5 {
-  font: 20px;
+  font-size: 22px;
   font-weight: italic;
 }
 
