--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 20px 20px 20px 20px;
   font-family: Ariel, serif;
-  background-color: #00008B;
+  background-color: #000080;
   
   
 }
@@ -29,7 +29,7 @@ h3 {
 #frame {
   font-family: serif;
   color: #ffffff;
-  margin: 30% auto 30%;
+  margin: 0% auto 0%;
   
 }
 
