--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
   color: #ffffff;
   font-size: 48px;
   font-stretch: ultra-expanded;
-  border: 10px solid #ffffff;
+  border: 5px solid #c0c0c0;
   
   
 }
