--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ h5 {
   }
 .head {
   border: 5px solid #c0c0c0;
-  border-spacing: 5px 0 5px 0;
+  border-spacing: 0 0 0 0;
+  padding-bottom: 2px;
 }
 
 .border {
