--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h5 {
     float: right;
   }
 .head {
-  border: 5px solid #c0c0c0;
+  border: 5px inset #c0c0c0;
   border-spacing: 0 0 0 0;
   padding-bottom: 2px;
 }
