--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h5 {
   min-width: 300px;
   flex: 1;
   padding-left: 5px;
+  padding-top: 2px;
 }
 
 .main {
@@ -64,7 +65,7 @@ h5 {
     float: right;
   }
 .head {
-  border: 5px inset #c0c0c0;
+  border: 5px solid #c0c0c0;
   border-spacing: 0 0 0 0;
   padding-bottom: 2px;
 }
